[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Texturen/Player_F_Wizard.png" type="Texture" id=2]
[ext_resource path="res://Player/PlayerHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Texturen/weapon_knight_sword.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "died"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 0.183011 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.00392157, 0.00392157, 0.00392157, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 10 )

[sub_resource type="Animation" id=7]
resource_name = "attack_l"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4.658, 0.342 ), Vector2( -9.658, 7.342 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sword:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sword/Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.65788, 0.342117 ), Vector2( 9.65788, 7.34212 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sword:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sword/Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2.85714, 12.8571 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.657883, 0.657883 )
collision_layer = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 9
frame = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/died = SubResource( 1 )
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="PlayerHUD" parent="." instance=ExtResource( 3 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8.3, 9.5 )

[node name="AttackCooltime" type="Timer" parent="."]
wait_time = 0.2

[node name="attack" type="AnimationPlayer" parent="."]
anims/attack_l = SubResource( 7 )
anims/attack_r = SubResource( 8 )

[node name="Sword" type="Sprite" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -9.658, 7.342 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Sword"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Area2D"]
position = Vector2( 0, -1.42857 )
shape = SubResource( 9 )
disabled = true

[node name="FX" type="Node2D" parent="."]

[node name="attack" type="AudioStreamPlayer2D" parent="FX"]
volume_db = 24.0
bus = "Effekte"

[node name="hit" type="AudioStreamPlayer2D" parent="FX"]
volume_db = 24.0
bus = "Effekte"

[node name="died" type="AudioStreamPlayer2D" parent="FX"]
volume_db = 24.0
bus = "Effekte"
[connection signal="timeout" from="AttackCooltime" to="." method="_on_AttackCooltime_timeout"]
[connection signal="body_entered" from="Sword/Area2D" to="." method="_on_Area2D_body_entered"]
